Provider fixed and new message box added

--- a/src/SendMail.css
+++ b/src/SendMail.css
@@ -55,3 +55,11 @@
 .sendMail_message{
     flex: 1;
 }
+
+.sendMail_error{
+    background-color: white;
+    color: red;
+    font-size: smaller;
+    padding: 2px;
+    text-align: right;
+}
